# MTRN4231_burger_bot

./: .gitignore  README.md  requirements.txt
burger_assembler/burger_assembler/: script.sh
burger_assembler/burger_assembler/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
burger_assembler/burger_assembler/install/custom_interface/share/custom_interface/: local_setup.sh  package.sh
burger_assembler/burger_assembler/install/moveit_path_planner/lib/moveit_path_planner/: moveit_path_planning_server
burger_assembler/burger_assembler/log/: latest_build
burger_assembler/burger_assembler/src/custom_interface/: CMakeLists.txt  package.xml
burger_assembler/burger_assembler/src/moveit_path_planner/: CMakeLists.txt
burger_assembler/burger_assembler/src/moveit_path_planner/src/: moveit_path_planning_server.cpp
log/: latest_build
moveit_testing/install/: local_setup.sh  setup.sh
moveit_testing/install/custom_interface/share/custom_interface/: local_setup.sh  package.sh
moveit_testing/install/moveit_path_planner/lib/moveit_path_planner/: moveit_path_planning_server
moveit_testing/install/moveit_path_planner/share/moveit_path_planner/: package.ps1  package.sh
moveit_testing/log/: latest_build
moveit_testing/src/moveit_path_planner/: CMakeLists.txt  package.xml
moveit_testing/src/moveit_path_planner/src/: moveit_path_planning_server.cpp
src/arduino_controller/: CMakeLists.txt  package.xml
src/arduino_controller/NemaCont2/: NemaCont2.ino
src/arduino_controller/src/: gripper_serial_node.cpp
src/arm_control/: CMakeLists.txt  package.xml
src/arm_control/src/: controller.cpp
src/brain/: CMakeLists.txt  brainNode.cpp  package.xml
src/brain/src/: brainNode.cpp
src/burger_bot_cell/burger_bot_config/: .setup_assistant  CMakeLists.txt  package.xml
src/burger_bot_cell/burger_bot_config/config/: burger_bot_cell.ros2_control.xacro  burger_bot_cell.srdf  burger_bot_cell.urdf.xacro  initial_positions.yaml  joint_limits.yaml
src/burger_bot_cell/burger_bot_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/burger_bot_cell/burger_bot_config_old/: package.xml
src/burger_bot_cell/burger_bot_config_old/config/: kinematics.yaml  moveit_controllers.yaml
src/burger_bot_cell/burger_bot_config_old/launch/: move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py
src/burger_bot_cell/burger_bot_controller/: CMakeLists.txt  package.xml
src/burger_bot_cell/burger_bot_controller+old/: CMakeLists.txt  package.xml
src/burger_bot_cell/burger_bot_controller+old/launch/: rsp_launch.py
src/burger_bot_cell/burger_bot_controller/config/: burger_bot_calibration.yaml
src/burger_bot_cell/burger_bot_controller/launch/: start_robot_launch.py
src/burger_bot_cell/burger_bot_controller/rviz/: view_robot.rviz
src/burger_bot_cell/burger_bot_controller/urdf/: burger_bot_controlled.urdf.xacro
src/burger_bot_cell/burger_bot_description/: CMakeLists.txt  package.xml
src/burger_bot_cell/burger_bot_description/launch/: view_robot_launch.py
src/burger_bot_cell/burger_bot_description/meshes/: Tablev2_v13.stl
src/burger_bot_cell/burger_bot_description/urdf/: burger_bot.urdf.xacro  burger_bot_macro.xacro
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/action/: Movement.action  OrderRequest.action
src/custom_interfaces/msg/: Command.msg  IngredientPos.msg  Ingredients.msg
src/custom_interfaces/srv/: GripperServer.srv  InputServer.srv
src/hello_moveit/: package.xml
src/hello_moveit/src/: hello_moveit.cpp
src/launch/: arduino.launch.py  arm_server_launch.py  brain.launch.py  input.launch.py  input_node_launch.py  perception.launch.py  system.launch.py  ur_startup.launch.py
src/moveit_example/: CMakeLists.txt  package.xml
src/moveit_example/src/: moveit_example.cpp
src/moveit_path_planner/: CMakeLists.txt  package.xml
src/moveit_path_planner/launch/: planning_server.launch.py
src/moveit_path_planner/src/: moveit_path_planning_action.cpp  moveit_path_planning_server.cpp
src/moveit_test/: CMakeLists.txt  package.xml
src/moveit_test/launch/: test.launch.py
src/perception/: package.xml  setup.py
src/perception/perception/: static_image_tests.py  yolo_vision.py
src/perception/src/: static_image_tests.py
src/perception_markers/: CMakeLists.txt  package.xml
src/perception_markers/launch/: display_markers.launch.py
src/perception_markers/src/: ingredient_markers_node.cpp
src/robot_config/: .setup_assistant
src/robot_config/config/: joint_limits.yaml  robot.srdf  sensors_3d.yaml
src/robot_controller/launch/: start_robot_launch.py
src/robot_controller/urdf/: robot_controlled.urdf.xacro
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: view_robot_launch.py
src/robot_description/meshes/: EndEffector.mtl  Table.mtl
src/robot_description/urdf/: burger_bot.xacro  end_effector.urdf  robot.urdf.xacro  robot_end_effector.urdf.xacro  robot_macro.xacro  table.urdf
src/user_input/: CMakeLists.txt  package.xml
src/user_input/src/: inputNode.cpp
src/visualisation/: CMakeLists.txt  package.xml
yolo_testing/: model_eval.py  model_training.py  results.txt
yolo_testing/ros_bags_data/: metadata.yaml
yolo_testing/training/: data.yaml  train.txt
yolo_testing/training/labels/train/: IMG_7697.txt  IMG_7698.txt  IMG_7699.txt  IMG_7700.txt  IMG_7701.txt  IMG_7702.txt  IMG_7703.txt  IMG_7704.txt  IMG_7705.txt  IMG_7706.txt  IMG_7707.txt  IMG_7708.txt  IMG_7709.txt  IMG_7710.txt  IMG_7711.txt  IMG_7712.txt  IMG_7713.txt  IMG_7714.txt  IMG_7715.txt  IMG_7716.txt  IMG_7727.txt  IMG_7728.txt  IMG_7729.txt  IMG_7730.txt  IMG_7731.txt  IMG_7732.txt  IMG_7733.txt  IMG_7734.txt  IMG_7735.txt  IMG_7736.txt  IMG_7737.txt  IMG_7738.txt  IMG_7739.txt  IMG_7741.txt  IMG_7742.txt  IMG_7743.txt  IMG_7744.txt  IMG_7746.txt  IMG_7747.txt  IMG_7748.txt  (+55 more)
(+28 files in other folders)
