<?xml version="1.0"?>
<package format="3">
  <name>arduino_controller</name>
  <version>0.0.1</version>
  <description>ROS node to send open/close commands over serial to the gripper</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <!-- <depend>serialib</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>